# mooc-images

./: .gitignore  README.md  deploy.sh  mooc-images.cabal  run-local.sh  stack.yaml
app/: devel.hs
config/: keter.yaml  keter.yml  models  routes  settings.yml  settingsPostgreSQL.yml  settingsSqlite.yml  test-settings.yml
locations/: InsertCountries.hs  InsertPlaces.hs  location-import.hs
prevcourses/: prevcourses-import.hs
src/: Application.hs  Config.hs  Dispatch.hs  Foundation.hs  Import.hs  Main.hs  Model.hs  Settings.hs
src/Foundation/: StoryView.hs
src/Handler/: EdxCourse.hs  FindCountry.hs  FindPlace.hs  Home.hs  Image.hs  ImageUpload.hs  ImgPreview.hs  Preview.hs  Story.hs
templates/: home.cassius  home.hamlet  imageUpload.cassius  imageUpload.hamlet  imageUpload.julius  login.hamlet  story.hamlet
test/Handler/: HomeSpec.hs
to-static/: main.hs
