name: mooc-images
version: 0.9
cabal-version: 1.22
build-type: Simple
license: MIT
license-file: LICENSE
copyright: (c) Artem Chirkin
maintainer: Artem Chirkin <chirkin@arch.ethz.ch>
stability: experimental
homepage: http://ia.arch.ethz.ch/achirkin
bug-reports: mailto:chirkin@arch.ethz.ch
synopsis: EdX MOOC image upload service
description:
    A small web service based on yesod.
    Developed to support edX courses provided by the Chair iA at ETH Zurich.
    Provides two pages:
    1) share - a post-form to be embedded into edX for uploading images;
    2) / - view images uploaded by students.
category: Web
author: Artem Chirkin

executable mooc-images
    main-is: Main.hs
    build-depends:
        aeson -any,
        base >=4.8,
        base64-bytestring -any,
        blaze-builder -any,
        blaze-markup -any,
        bytestring -any,
        case-insensitive -any,
        conduit -any,
        conduit-extra -any,
        containers -any,
        data-default -any,
        gd -any,
        http-conduit -any,
        ltiv1p1 -any,
        monad-logger -any,
        persistent -any,
        persistent-postgresql -any,
        persistent-sqlite -any,
        resourcet -any,
        shakespeare -any,
        text -any,
        time -any,
        transformers -any,
        wai -any,
        yesod -any,
        yesod-core -any,
        yesod-static -any
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:
        Foundation
        Dispatch
        Model
        Config
        Handler.ImgPreview
        Handler.Image
        Handler.ImageUpload
        Handler.FindCountry
        Handler.FindPlace
        Handler.Home
        Handler.Story
    ghc-options: -Wall -ferror-spans

executable location-import
    main-is: location-import.hs
    build-depends:
        base >=4.8,
        bytestring -any,
        conduit -any,
        conduit-extra -any,
        containers -any,
        persistent -any,
        persistent-postgresql -any,
        persistent-sqlite -any,
        text -any,
        time -any,
        transformers -any,
        yesod -any
    default-language: Haskell2010
    hs-source-dirs: locations src
    other-modules:
        InsertCountries
        InsertPlaces
        Model
        Config
    ghc-options: -Wall -ferror-spans


executable prevcourses-import
    main-is: prevcourses-import.hs
    build-depends:
        base >=4.8,
        directory >=1.2.5.0,
        bytestring -any,
        conduit -any,
        conduit-extra -any,
        containers -any,
        persistent -any,
        persistent-postgresql -any,
        persistent-sqlite -any,
        text -any,
        time -any,
        transformers -any,
        yesod -any,
        easy-file -any,
        resourcet -any,
        gd -any
    default-language: Haskell2010
    hs-source-dirs: prevcourses src
    other-modules:
        Model
        Config
    ghc-options: -Wall -ferror-spans
