name: mooc-images
version: 1.0
cabal-version: >=1.22
build-type: Simple
license: MIT
license-file: LICENSE
copyright: (c) Artem Chirkin
maintainer: Artem Chirkin <chirkin@arch.ethz.ch>
stability: experimental
homepage: https://github.com/achirkin/mooc-images
bug-reports: https://github.com/achirkin/mooc-images/issues
synopsis: EdX MOOC image upload service
description:
    A small web service based on yesod.
    Developed to support edX courses provided by the Chair iA at ETH Zurich.
    Provides two pages:
    1) share - a post-form to be embedded into edX for uploading images;
    2) / - view images uploaded by students.
    3) /old - view imported images from previous courses.
    Many thanks to yesodweb group for the project and the templates!
category: Web
author: Artem Chirkin

source-repository head
    type: git
    location: https://github.com/achirkin/mooc-images.git

flag dev
    description:
        Turn on development settings, like auto-reload templates.
    default: False

flag library-only
    description:
        Build for use with "yesod devel"
    default: False

flag postgresql
    description:
        Use PostgreSQL database. Otherwise use sqlite.

library

    if ((flag(postgresql) && !flag(dev)) && !flag(library-only))
        cpp-options: -DPOSTGRESQL

    if (flag(dev) || flag(library-only))
        cpp-options: -DDEVELOPMENT
        ghc-options: -Wall -fwarn-tabs -O0
    else
        ghc-options: -Wall -fwarn-tabs -O2

    if ((flag(postgresql) && !flag(dev)) && !flag(library-only))
        build-depends:
            persistent-postgresql -any
    else
        build-depends:
            persistent-sqlite -any
    exposed-modules:
        Application
        Foundation
        Foundation.StoryView
        Handler.EdxCourse
        Handler.Common
        Handler.ImgPreview
        Handler.Image
        Handler.ImageUpload
        Handler.FindCountry
        Handler.FindPlace
        Handler.Home
        Handler.Story
        Import
        Import.NoFoundation
        Model
        Settings
        Settings.StaticFiles
    build-depends:
        base >=4 && <5,
        yesod >=1.4.3 && <1.5,
        yesod-core >=1.4.17 && <1.5,
        yesod-auth >=1.4.0 && <1.5,
        yesod-static >=1.4.0.3 && <1.6,
        yesod-form >=1.4.0 && <1.5,
        yesod-websockets -any,
        classy-prelude >=0.10.2,
        classy-prelude-conduit >=0.10.2,
        classy-prelude-yesod >=0.10.2,
        bytestring >=0.9 && <0.11,
        text >=0.11 && <2.0,
        persistent >=2.0 && <2.6,
        persistent-template >=2.0 && <2.6,
        template-haskell -any,
        shakespeare >=2.0 && <2.1,
        hjsmin >=0.1 && <0.3,
        monad-control >=0.3 && <1.1,
        wai-extra >=3.0 && <3.1,
        yaml >=0.8 && <0.9,
        http-conduit >=2.1 && <2.2,
        directory >=1.1 && <1.3,
        warp >=3.0 && <3.3,
        data-default -any,
        aeson >=0.6 && <0.12,
        conduit >=1.0 && <2.0,
        conduit-extra >=1.0 && <2.0,
        monad-logger >=0.3 && <0.4,
        fast-logger >=2.2 && <2.5,
        wai-logger >=2.2 && <2.3,
        file-embed -any,
        safe -any,
        unordered-containers -any,
        containers -any,
        vector -any,
        time -any,
        case-insensitive -any,
        wai -any,
        stm -any,
        time -any,
        ltiv1p1 -any,
        gd -any,
        resourcet -any,
        blaze-markup -any,
        blaze-builder -any,
        transformers -any,
        base64-bytestring -any,
        yesod-auth-ldap-native >=0.2,
        esqueleto -any
    default-language: Haskell2010
    default-extensions: TemplateHaskell QuasiQuotes OverloadedStrings
                        NoImplicitPrelude MultiParamTypeClasses TypeFamilies GADTs
                        GeneralizedNewtypeDeriving FlexibleContexts FlexibleInstances
                        EmptyDataDecls NoMonomorphismRestriction DeriveDataTypeable
                        ViewPatterns TupleSections RecordWildCards
    hs-source-dirs: src

executable mooc-images

    if ((flag(postgresql) && !flag(dev)) && !flag(library-only))
        cpp-options: -DPOSTGRESQL

    if flag(library-only)
        buildable: False
    main-is: main.hs
    build-depends:
        base -any,
        mooc-images -any
    default-language: Haskell2010
    hs-source-dirs: app
    ghc-options: -threaded -rtsopts -with-rtsopts=-N

executable location-import

    if ((flag(postgresql) && !flag(dev)) && !flag(library-only))
        cpp-options: -DPOSTGRESQL

    if flag(library-only)
        buildable: False

    if (flag(postgresql) && !flag(dev))
        build-depends:
            persistent-postgresql -any
    else
        build-depends:
            persistent-sqlite -any
    main-is: location-import.hs
    build-depends:
        base >=4.8,
        bytestring -any,
        conduit -any,
        conduit-extra -any,
        containers -any,
        persistent -any,
        text -any,
        time -any,
        transformers -any,
        yesod -any,
        classy-prelude-yesod >=0.10.2,
        yaml -any,
        aeson -any,
        template-haskell -any,
        file-embed -any,
        ltiv1p1 -any
    default-language: Haskell2010
    default-extensions: TemplateHaskell TypeFamilies OverloadedStrings
                        MultiParamTypeClasses GADTs GeneralizedNewtypeDeriving
                        NoImplicitPrelude RecordWildCards
    hs-source-dirs: locations src
    other-modules:
        InsertCountries
        InsertPlaces
        Model
    ghc-options: -Wall -ferror-spans

executable prevcourses-import

    if ((flag(postgresql) && !flag(dev)) && !flag(library-only))
        cpp-options: -DPOSTGRESQL

    if flag(library-only)
        buildable: False

    if ((flag(postgresql) && !flag(dev)) && !flag(library-only))
        build-depends:
            persistent-postgresql -any
    else
        build-depends:
            persistent-sqlite -any
    main-is: prevcourses-import.hs
    build-depends:
        base >=4.8,
        directory >=1.2.5.0,
        bytestring -any,
        conduit -any,
        conduit-extra -any,
        containers -any,
        persistent -any,
        text -any,
        time -any,
        transformers -any,
        yesod -any,
        easy-file -any,
        resourcet -any,
        gd -any,
        classy-prelude-yesod >=0.10.2,
        yaml -any,
        aeson -any,
        template-haskell -any,
        file-embed -any,
        ltiv1p1 -any
    default-language: Haskell2010
    default-extensions: TemplateHaskell TypeFamilies OverloadedStrings
                        MultiParamTypeClasses GADTs GeneralizedNewtypeDeriving
                        NoImplicitPrelude RecordWildCards
    hs-source-dirs: prevcourses src
    other-modules:
        Model
    ghc-options: -Wall -ferror-spans

test-suite mooc-images-test

    if ((flag(postgresql) && !flag(dev)) && !flag(library-only))
        cpp-options: -DPOSTGRESQL

    if ((flag(postgresql) && !flag(dev)) && !flag(library-only))
        build-depends:
            persistent-postgresql -any
    else
        build-depends:
            persistent-sqlite -any
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-depends:
        base -any,
        mooc-images -any,
        yesod-test >=1.5.0.1 && <1.6,
        yesod-core -any,
        yesod -any,
        persistent -any,
        resourcet -any,
        monad-logger -any,
        shakespeare -any,
        transformers -any,
        hspec >=2.0.0,
        classy-prelude -any,
        classy-prelude-yesod -any,
        aeson -any
    default-language: Haskell2010
    default-extensions: TemplateHaskell QuasiQuotes OverloadedStrings
                        NoImplicitPrelude CPP MultiParamTypeClasses TypeFamilies GADTs
                        GeneralizedNewtypeDeriving FlexibleContexts FlexibleInstances
                        EmptyDataDecls NoMonomorphismRestriction DeriveDataTypeable
                        ViewPatterns TupleSections
    hs-source-dirs: test
    other-modules:
        Handler.CommonSpec
        Handler.HomeSpec
        TestImport
    ghc-options: -Wall
